Add Transactions page layout (Transaction.html)

--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
          </div>
          <div class="nav">
         <nav>
-            <span>მთავარი</span>
+             <a class="span-hover" href="index.html">მთავარი</a>
             <span>პროდუქტები</span>
             <span>გადახდები და გადარიცხვები</span>
             <span>გზავნილები</span>
-            <span class="span-hover">ჩემი ტრანზაქციები</span>
+             <a class="span-hover" href="Transaktion.html">ჩემი ტრანზაქციები</a>
             <span>შეთავაზებები და განაცხადები</span>
             <span>ჩემი ფინანსები</span>
         </nav>
@@ -68,12 +68,12 @@
         <div class="transactions-box">
           <div class="text" style="display: flex; justify-content: space-between; width: 400px;">
     <span class="transactions-title">ბოლო ტრანზაქციები</span>
-      <span class="transactions-title span-hover" >სრულად ნახვა</span>
+     <a class="span-hover transactions-title" href="Transaktion.html">სრულად ნახვა</a>
     </div>
   <div class="transaction-item">
     <div class="transaction-left">
-      <span class="icon">🔒</span>
-      <span class="date">12 ივლისი 2025</span>
+    <img class="icon" src="/svg/block.svg" alt="" width="20px" height="20px">
+      <span class="date">11 ივლისი 2025</span>
     </div>
     <div class="transaction-details">ORI NABIJI>Tbilisi GE</div>
     <div class="transaction-amount">-9,88 GEL</div>
@@ -81,7 +81,7 @@
 
   <div class="transaction-item">
     <div class="transaction-left">
-      <span class="icon">🔒</span>
+      <img class="icon" src="/svg/block.svg" alt="" width="20px" height="20px">
       <span class="date">11 ივლისი 2025</span>
     </div>
     <div class="transaction-details">ORI NABIJI LLC>Tbilisi GE</div>
@@ -90,7 +90,7 @@
 
   <div class="transaction-item">
     <div class="transaction-left">
-      <span class="icon">🔒</span>
+      <img class="icon" src="/svg/block.svg" alt="" width="20px" height="20px">
       <span class="date">11 ივლისი 2025</span>
     </div>
     <div class="transaction-details">Wolt>Tbilisi GE</div>
@@ -104,36 +104,36 @@
       <div class="diagrama">
        <div class="diagrama-month">
          <div class="card-content">
-    <h2>Spending–Last 7 days</h2>
+    <h2>ხარჯები ბოლო 7 დღის განმავლობაში</h2>
 
     <div class="chart">
       <div class="bar-group">
         <div class="bar" style="height: 60px;"></div>
-        <span>mon</span>
+        <span>ორშ</span>
       </div>
       <div class="bar-group">
         <div class="bar" style="height: 130px;"></div>
-        <span>tue</span>
+        <span>სამ</span>
       </div>
       <div class="bar-group">
         <div class="bar" style="height: 150px;"></div>
-        <span>wed</span>
+        <span>ოთხ</span>
       </div>
       <div class="bar-group">
         <div class="bar" style="height: 120px;"></div>
-        <span>thu</span>
+        <span>ხუთ</span>
       </div>
       <div class="bar-group">
         <div class="bar" style="height: 90px;"></div>
-        <span>fri</span>
+        <span>პარ</span>
       </div>
       <div class="bar-group">
         <div class="bar" style="height: 160px;"></div>
-        <span>sat</span>
+        <span>შაბ</span>
       </div>
       <div class="bar-group">
         <div class="bar" style="height: 100px;"></div>
-        <span>sun</span>
+        <span>კვ</span>
       </div>
     </div>
 
@@ -141,12 +141,12 @@
 
     <div class="footer">
       <div class="total">
-        <p>Total this month</p>
+        <p>ჯამი – მიმდინარე თვეში</p>
         <h3>$478.33</h3>
       </div>
       <div class="percent">
         <strong>+2.4%</strong>
-        <p>from last month</p>
+        <p>წინა თვის</p>
       </div>
     </div>
   </div>
@@ -155,19 +155,19 @@
   <h3 class="contact-title">კონტაქტები</h3>
   <div class="contact-list">
     <div class="contact-item">
-      <div class="contact-icon">👤</div>
+      <div class="contact-icon"><img src="/svg/user.svg" alt="" width="20px" height="20px"></div>
       <div class="contact-name">ალვა მატლიანი</div>
     </div>
     <div class="contact-item">
-      <div class="contact-icon">👤</div>
+      <div class="contact-icon"><img src="/svg/user.svg" alt="" width="20px" height="20px"></div>
       <div class="contact-name">მიხსანდრი ჯოხონელიძე</div>
     </div>
     <div class="contact-item">
-      <div class="contact-icon">👤</div>
+      <div class="contact-icon"><img src="/svg/user.svg" alt="" width="20px" height="20px"></div>
       <div class="contact-name">ნატია ხუბულაშვილი</div>
     </div>
     <div class="contact-item active">
-      <div class="contact-icon">👥</div>
+      <div class="contact-icon"><img src="/svg/user-two.svg" alt="" width="20px" height="20px"></div>
       <div class="contact-name">სხვასთან გადარიცხვა</div>
     </div>
     <div class="contact-item extra">
