Complete application layout and styling

--- a/Transaction.html
+++ b/Transaction.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>MoneyBank</title>
+     <link rel="icon" href="/svg/logo.svg" type="svg" />
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
@@ -42,7 +43,7 @@
           <span>პროდუქტები</span>
           <span>გადახდები და გადარიცხვები</span>
           <span>გზავნილები</span>
-          <a class="span-hover" href="Transaktion.html">ჩემი ტრანზაქციები</a>
+          <a class="span-hover" href="Transaction.html">ჩემი ტრანზაქციები</a>
           <span>შეთავაზებები და განაცხადები</span>
           <span>ჩემი ფინანსები</span>
         </nav>
