--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <link rel="icon" href="/svg/logo.svg" type="svg" />
     <link rel="stylesheet" href="./style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>MoneyBank – შენი ფინანსური მენეჯერი</title>
     <meta
       name="description"
       content="MoneyBank გაძლევს შესაძლებლობას მართო შენი ფინანსები მარტივად და ეფექტურად. იხილე ტრანზაქციები, ხარჯები და შემოსავლები ერთ სივრცეში."
@@ -54,7 +53,7 @@
           <span>პროდუქტები</span>
           <span>გადახდები და გადარიცხვები</span>
           <span>გზავნილები</span>
-          <a class="span-hover" href="Transaktion.html">ჩემი ტრანზაქციები</a>
+          <a class="span-hover" href="Transaction.html">ჩემი ტრანზაქციები</a>
           <span>შეთავაზებები და განაცხადები</span>
           <span>ჩემი ფინანსები</span>
         </nav>
@@ -84,7 +83,7 @@
           <a href="">პროდუქტები</a>
           <a href="">გადახდები და გადარიცხვები</a>
           <a href="">გზავნილები</a>
-          <a href="Transaktion.html">ჩემი ტრანზაქციები</a>
+          <a href="Transaction.html">ჩემი ტრანზაქციები</a>
           <a href="">შეთავაზებები და განაცხადები</a>
           <a href="">ჩემი ფინანსები</a>
         </nav>
@@ -178,7 +177,7 @@
           </div>
 
           <div class="all-transactions">
-            <a class="span-hover" href="Transaktion.html">ყველა ტრანზაქცია</a>
+            <a class="span-hover" href="Transaction.html">ყველა ტრანზაქცია</a>
           </div>
         </div>
         <div class="card">
